--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost/library"
     username: "root"
-    password: "1234"
+    password: "Ecbank1203!"
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
